--- a/src/03/Box.css
+++ b/src/03/Box.css
@@ -1,3 +1,13 @@
-tbody td    {
-    text-align: right;
+*   {
+    
+}
+
+main h1 {
+    text-align:center;
+    
+}
+tfoot td    {
+    text-align: center;
+    background-color: aliceblue;
+    font-family: 'IBM Plex Sans KR', sans-serif!important;
 }
