--- a/src/03/Box.css
+++ b/src/03/Box.css
@@ -1,11 +1,8 @@
-*   {
-    
+.boxName  {
+    text-align:center;
+    font-family: 'IBM Plex Sans KR', sans-serif!important;
 }
 
-main h1 {
-    text-align:center;
-    
-}
 tfoot td    {
     text-align: center;
     background-color: aliceblue;
